[package]
name = "vcdump"
version = "0.1.0"
authors = ["Samuel Thomas <sgpthomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcd = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2.14"
structopt = "0.3.12"