[package]
description = "Simple tool to convert vcd files to json files so that you can use all your favorite command line tools to view the output of your vcd files."
repository = "https://github.com/sgpthomas/vcdump"
readme = "README.md"
license = "MIT"
keywords = ["vcd", "json", "cli"]
name = "vcdump"
version = "0.1.2"
authors = ["Samuel Thomas <sgpthomas@gmail.com>"]
edition = "2018"

[dependencies]
vcd = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2.14"
structopt = "0.3.12"
